Docs: change media query style to the new version. Fixed nth-child on desktop query. Re-added a gap to card-container

--- a/styles/assignment_one.css
+++ b/styles/assignment_one.css
@@ -1,13 +1,14 @@
 
-/* Container specifics - Good for Mobile */
+/* Container specifics - Also set for Mobile */
 
 .container {
-    max-width:fit-content;
+    max-width:none;
 }
 .card-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    row-gap: 30px;
 }
 .card {
     width: unset;
@@ -29,7 +30,6 @@ ul {
     list-style-type:none;
 }
 
- 
 h3 {
     font-family: Arial, Helvetica, sans-serif;
     font-weight:100;
@@ -44,12 +44,13 @@ p {
     font-family: Arial, Helvetica, sans-serif;
 }
 /* tablet */
-
-@media screen and (min-width: 768px) and (max-width: 1200px) {
+@media (width >=768px) {
     .card-container {
     display: grid;
     grid-template-columns: repeat (2, 100%);
     gap: 30px;
+    padding-left:2%;
+    padding-right:2%;
 }
 .card:nth-last-child(1){
     width: 100%;
@@ -57,11 +58,14 @@ p {
 }
 }
 /* Desktop */
-
-@media screen and (min-width: 1200px) {
+@media (width >=1200px) {
     .card-container{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 30px;      
+        }
+        .card:nth-last-child(1) {
+            grid-column: auto;
+        }
 }   
-}
+
